transformSoHoaDon